<?xml version="1.0"?>
<package format="2">
  <name>robot_controller</name>
  <version>1.0.0</version>
  <description>The robot_controller package</description>

  <maintainer email="ubuntu@todo.com">ubuntu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export />
</package>
